<resources>
    <string name="app_name">Ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="join_now">Join now</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="another">or register with</string>
    <string name="register">Register</string>
    <string name="agree1">"By signing in here, you agree to "</string>
    <string name="agree2"><![CDATA["Terms & Conditions "]]></string>
    <string name="agree3">"and "</string>
    <string name="agree4">"Privacy Policy "</string>
    <string name="agree5">TokoPhincon.</string>
    <string name="agree"><![CDATA[By signing in here, you agree to the Terms & Conditions and Privacy Policy of TokoPhincon.]]></string>
    <string name="email_invalid">Invalid email.</string>
    <string name="password_invalid">Invalid password.</string>
    <string name="another2">or sign in with</string>
    <string name="nama">Name</string>
    <string name="finish">Finish</string>
    <string name="title_dialog">Choose Image</string>
    <string name="term_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="wishlist">Wishlist</string>
    <string name="transaction">Transaction</string>
    <string name="logout">Logout</string>
    <string name="en">EN</string>
    <string name="id">ID</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="search">Search</string>
    <string name="empty_title">Empty</string>
    <string name="empty_subtitle">Your requested data is unavailable</string>
    <string name="connection_title">Connection</string>
    <string name="connection_subtitle">Your connection is unavailable</string>
    <string name="refresh">Refresh</string>
    <string name="reset">Reset</string>
    <string name="server_subtitle">Internal Server Error</string>
    <string name="server_title">500</string>
    <string name="product_rating_and_sales">%1$.1f | Sold %2$d</string>
    <string name="review">Review</string>
    <string name="sale">Sale</string>
    <string name="low_price">Lowest Price</string>
    <string name="high_price">Highest Price</string>
    <string name="apple">Apple</string>
    <string name="asus">Asus</string>
    <string name="price">Price</string>
    <string name="lowest">Lowest</string>
    <string name="highest">Highest</string>
    <string name="show_product">Show Products</string>
    <string name="dell">Dell</string>
    <string name="lenovo">Lenovo</string>
    <string name="filter">Filter</string>
    <string name="buy_now">Buy Now</string>
    <string name="cart_plus">+ cart</string>
    <string name="todo">TODO</string>
    <string name="total_sales">Sold %1$d</string>
    <string name="detail_rating_and_total_rating">%1$.1f (%2$d)</string>
    <string name="choose_variant">Choose variant</string>
    <string name="product_description">Product Description</string>
    <string name="buyer_review">Buyer Review</string>
    <string name="_4_5">4.5</string>
    <string name="_5_0">/5.0</string>
    <string name="text_satisfaction">%1$d%% of buyers are satisfied</string>
    <string name="rating_and_review_total">%1$d ratings · %2$d reviews</string>
    <string name="see_all">See All</string>
    <string name="total_wishlist_item">%1$d items</string>
    <string name="wishlist_remove_successful">Successfully removed from wishlist</string>
    <string name="choose_all">Choose All</string>
    <string name="delete">Delete</string>
    <string name="total_price">Total Price</string>
    <string name="buy">Buy</string>
    <string name="total_stock">Stock %1$d</string>
    <string name="remaining_stock">Remaining %1$d</string>
    <string name="cart_insert_successful">Successfully added to cart</string>
    <string name="stock_is_unavailable">Stock is unavailable</string>
    <string name="payment">Payment</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="leave_a_review">Leave a Review</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="shopping">Shopping</string>
    <string name="total_payment">Total Payment</string>
    <string name="review_transaction">Review</string>
    <string name="total_item">%1$d items</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="checkout">Checkout</string>
    <string name="product_detail">Product Detail</string>
    <string name="choose_payment">Choose payment</string>
    <string name="profile">Profile</string>
    <string name="error">Error</string>
    <string name="wishlist_insert_successful">Successfully insert wishlist</string>
    <string name="helper_email">Example: test@gmail.com</string>
    <string name="helper_password">Minimum 8 characters</string>



</resources>