<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.main.store.FilterSheetFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filter"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/bt_reset"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Urutkan"
        android:textFontWeight="600"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filter" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sort"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_review"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            app:ensureMinTouchTargetSize="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sale"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale"
            app:ensureMinTouchTargetSize="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_low"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_price"
            app:ensureMinTouchTargetSize="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_high"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_price"
            app:ensureMinTouchTargetSize="false" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Kategori"
        android:textFontWeight="600"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cg_sort" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_apple"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apple"
            app:ensureMinTouchTargetSize="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_asus"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asus"
            app:ensureMinTouchTargetSize="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dell"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dell"
            app:ensureMinTouchTargetSize="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_lenovo"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lenovo"
            app:ensureMinTouchTargetSize="false" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textFontWeight="600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cg_category" />

    <LinearLayout
        android:id="@+id/ll_low_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_price">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_lowest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lowest" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="16dp"
            android:layout_height="0dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_highest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/highest" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/bt_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/show_product"
        app:layout_constraintTop_toBottomOf="@id/ll_low_high" />


</androidx.constraintlayout.widget.ConstraintLayout>